--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,22 @@ body,
   background-color: #010026;
   @apply text-white;
 }
+
+@layer components {
+  .sidebar-icon { 
+    @apply relative flex items-center justify-center mt-2 mb-2 mx-auto shadow-lg
+     text-white 
+    hover:bg-red hover:text-white 
+    rounded-3xl hover:rounded-xl
+    transition-all duration-300
+    ease-linear cursor-pointer;
+  }
+  .sidebar-tooltip {
+    @apply absolute w-auto p-2 m-2 min-w-max top-10
+    rounded-md shadow-md
+    text-white bg-gray-900
+    text-xs font-bold
+    transition-all duration-100 scale-0 origin-left;
+  }
+}
+
